--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <h2>Support</h2>
 <p>
 For support, questions, or feedback, please contact:<br>
-📧 <a href="mailto:sigmetplotter@gmail.com">sigmetplotter@gmail.com</a>
+📧 <a href="mailto:aviationgrade.software@gmail.com">sigmetplotter@gmail.com</a>
 </p>
 
 <h2>Privacy Policy</h2>
