Fix typo in SIGMET PLOTTER description

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <h2>How to Use</h2>
 <p>A SIGMET (Significant Meteorological Information) is an official aviation weather advisory that warns pilots of severe weather phenomena that may affect the safety of flight. </p>
 <p>Effective situational awareness requires two key elements: an understanding of where these hazards are located and a clear view of the intended flight route.</p> 
-<p>SIGMET PLOTTER  helps you quickly and accurately identify these two critical elementss</p>
+<p>SIGMET PLOTTER  helps you quickly and accurately identify these two critical elements.</p>
     
 <h3>1) Plot a SIGMET</h3>
 <ol>
