Add App Store badge to index.html

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
 
 <h1>SIGMET Plotter</h1>
 
+    <p class="store-badge">
+  <a href="https://apps.apple.com/app/id6737157027" target="_blank" rel="noopener">
+    <img src="assets/" alt="Download on the App Store" height="44">
+  </a>
+</p>
+
 <p><strong>SIGMET Plotter</strong> is an aviation weather visualization tool designed for pilots and dispatchers.</p>
 
 <p>The app parses raw SIGMET text and plots hazardous weather areas directly on an interactive map. Pilots can also enter their planned route to quickly verify whether it intersects active SIGMET regions.</p>
