--- a/index.html
+++ b/index.html
@@ -45,12 +45,16 @@
 
     <p class="store-badge">
   <a href="https://apps.apple.com/app/id6737157027" target="_blank" rel="noopener">
-<img
-  src="/sigmet-plotter/Download_on_the_App_Store_Badge_ESMX_RGB_blk_100217.svg"
-  alt="Download on the App Store"
-  height="44"
-  style="width:auto; display:inline-block;"
->
+<p class="store-badge">
+  <a href="https://apps.apple.com/app/id6737157027" target="_blank" rel="noopener">
+    <img
+      src="/sigmet-plotter/appstore-badge.png"
+      alt="Download on the App Store"
+      height="44"
+      style="width:auto; display:inline-block;"
+    >
+  </a>
+</p>
   </a>
 </p>
 
