Update App Store badge image source

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <p class="store-badge">
   <a href="https://apps.apple.com/app/id6737157027" target="_blank" rel="noopener">
     <img
-      src="/sigmet-plotter/appstore-badge.png"
+      src="/sigmet-plotter/spBadge.pdf"
       alt="Download on the App Store"
       height="44"
       style="width:auto; display:inline-block;"
