--- a/index.html
+++ b/index.html
@@ -43,18 +43,23 @@
 
 <h1>SIGMET Plotter</h1>
 
+<p class="store-badge">
+  <a href="https://apps.apple.com/app/id6737157027" target="_blank" rel="noopener">
+    <img
+      src="/sigmet-plotter/spBadge.png"
+      alt="Download on the App Store"
+      height="44"
+      style="width:auto; display:inline-block;"
+    >
+  </a>
+</p>
     <p class="store-badge">
   <a href="https://apps.apple.com/app/id6737157027" target="_blank" rel="noopener">
 <p class="store-badge">
   <a href="https://apps.apple.com/app/id6737157027" target="_blank" rel="noopener">
   <p class="store-badge">
   <a href="https://apps.apple.com/app/id6737157027" target="_blank" rel="noopener">
-    <img
-      src="/sigmet-plotter/spBbadge.png"
-      alt="Download on the App Store"
-      height="44"
-      style="width:auto; display:inline-block;"
-    >
+  
   </a>
 </p>
   </a>
