--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 
 <p class="store-badge">
   <a href="https://apps.apple.com/app/id6737157027" target="_blank" rel="noopener">
-    <img
-      src="/sigmet-plotter/spBadge.png"
-      alt="Download on the App Store"
-      height="44"
-      style="width:auto; display:inline-block;"
-    >
+   <img
+  src="spBadge.png"
+  alt="Download on the App Store"
+  height="44"
+  style="width:auto; display:inline-block;"
+>
   </a>
 </p>
     <p class="store-badge">
