--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <body>
 
 <div class="header">
-    <img src="icon.png" alt="SIGMET Plotter App Icon" class="app-icon">
+    <img src="Download_on_the_App_Store_Badge_ESMX_RGB_blk_100217.svg" alt="SIGMET Plotter App Icon" class="app-icon">
     <h1>SIGMET Plotter</h1>
 </div>
 
