--- a/index.html
+++ b/index.html
@@ -1,174 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>SIGMET Plotter – Aviation Weather Visualization</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <title>SIGMET Plotter – Aviation Weather Visualization</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="icon.png">
+  <!-- Favicon (browser tab icon) -->
+  <link rel="icon" type="image/png" href="icon.png" />
 
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            background-color: #ffffff;
-            color: #111;
-            margin: 40px auto;
-            line-height: 1.6;
-            max-width: 820px;
-            padding: 0 18px;
-        }
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background-color: #ffffff;
+      color: #111;
+      margin: 40px auto;
+      line-height: 1.6;
+      max-width: 820px;
+      padding: 0 18px;
+    }
 
-        .header {
-            text-align: center;
-            margin-bottom: 25px;
-        }
+    .header {
+      text-align: center;
+      margin-bottom: 18px;
+    }
 
-        .app-icon {
-            width: 130px;
-            height: 130px;
-            border-radius: 28px;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.18);
-            margin-bottom: 15px;
-        }
+    .app-icon {
+      width: 120px;
+      height: 120px;
+      border-radius: 26px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.18);
+      display: inline-block;
+      margin-bottom: 12px;
+    }
 
-        h1 {
-            margin-bottom: 10px;
-        }
+    h1, h2, h3 { color: #000; }
 
-        h2 {
-            margin-top: 40px;
-        }
+    h1 {
+      margin: 0 0 8px 0;
+      font-size: 44px;
+      letter-spacing: -0.5px;
+    }
 
-        footer {
-            margin-top: 70px;
-            font-size: 0.9em;
-            color: #666;
-        }
+    h2 { margin-top: 38px; }
 
-        a {
-            color: #0066cc;
-            text-decoration: none;
-        }
+    a {
+      color: #0066cc;
+      text-decoration: none;
+    }
+    a:hover { text-decoration: underline; }
 
-        a:hover {
-            text-decoration: underline;
-        }
+    .store-badge {
+      text-align: center;
+      margin: 18px 0 32px;
+    }
 
-        .store-badge {
-            text-align: center;
-            margin: 25px 0 40px;
-        }
+    .badge-img {
+      height: 65px;
+      width: auto;
+      display: inline-block;
+      transition: transform 0.18s ease;
+    }
 
-        .badge-img {
-            height: 65px;
-            width: auto;
-            transition: transform 0.2s ease;
-        }
+    .badge-img:hover {
+      transform: scale(1.05);
+    }
 
-        .badge-img:hover {
-            transform: scale(1.05);
-        }
+    .note {
+      border-left: 4px solid #0066cc;
+      padding: 12px 16px;
+      background: #f4f8ff;
+      margin: 18px 0;
+    }
 
-        .note {
-            border-left: 4px solid #0066cc;
-            padding: 12px 16px;
-            background: #f4f8ff;
-            margin: 18px 0;
-        }
+    ol li { margin: 8px 0; }
+    ul li { margin: 6px 0; }
 
-        ol li {
-            margin: 8px 0;
-        }
-
-        ul li {
-            margin: 6px 0;
-        }
-    </style>
+    footer {
+      margin-top: 70px;
+      font-size: 0.9em;
+      color: #666;
+      text-align: center;
+    }
+  </style>
 </head>
 
 <body>
 
-<div class="header">
-    <img src="Download_on_the_App_Store_Badge_ESMX_RGB_blk_100217.svg" alt="SIGMET Plotter App Icon" class="app-icon">
+  <div class="header">
+    <img src="icon.png" alt="SIGMET Plotter App Icon" class="app-icon" />
     <h1>SIGMET Plotter</h1>
-    <img src="Download_on_the_App_Store_Badge_ESMX_RGB_blk_100217.svg" width="200">
-</div>
+  </div>
 
-<p class="store-badge">
-  <a href="https://apps.apple.com/app/id6737157027" target="_blank" rel="noopener">
-    <img 
-      src="Download_on_the_App_Store_Badge_ESMX_RGB_blk_100217.svg"
-      alt="Download on the App Store"
-      class="badge-img">
-  </a>
-</p>
+  <p class="store-badge">
+    <a href="https://apps.apple.com/app/id6737157027" target="_blank" rel="noopener">
+      <img
+        src="Download_on_the_App_Store_Badge_ESMX_RGB_blk_100217.svg"
+        alt="Download on the App Store"
+        class="badge-img"
+      />
+    </a>
+  </p>
 
-<p><strong>SIGMET Plotter</strong> is an aviation weather visualization tool designed for pilots and dispatchers.</p>
+  <p><strong>SIGMET Plotter</strong> is an aviation weather visualization tool designed for pilots and dispatchers.</p>
 
-<p>The app parses raw SIGMET text and plots hazardous weather areas directly on an interactive map. Pilots can also enter their planned route to quickly verify whether it intersects active SIGMET regions.</p>
+  <p>
+    The app parses raw SIGMET text and plots hazardous weather areas directly on an interactive map.
+    Pilots can also enter their planned route to quickly verify whether it intersects active SIGMET regions.
+  </p>
 
-<h2>Key Features</h2>
-<ul>
+  <h2>Key Features</h2>
+  <ul>
     <li>Automatic SIGMET text parsing</li>
     <li>Graphical display of weather hazard polygons</li>
     <li>Route plotting and intersection check</li>
     <li>Designed for fast preflight decision-making</li>
     <li>Works offline and online</li>
-</ul>
+  </ul>
 
-<h2>How to Use</h2>
+  <h2>How to Use</h2>
 
-<p>A SIGMET (Significant Meteorological Information) is an official aviation weather advisory warning pilots of severe weather phenomena that may affect the safety of flight.</p>
+  <p>
+    A SIGMET (Significant Meteorological Information) is an official aviation weather advisory warning pilots of severe
+    weather phenomena that may affect the safety of flight.
+  </p>
 
-<p>Effective situational awareness requires two key elements: understanding where hazards are located and clearly visualizing your intended flight route.</p>
+  <p>
+    Effective situational awareness requires two key elements: understanding where hazards are located and clearly
+    visualizing your intended flight route.
+  </p>
 
-<p><strong>SIGMET Plotter</strong> helps you quickly identify these two critical elements.</p>
+  <p><strong>SIGMET Plotter</strong> helps you quickly identify these two critical elements.</p>
 
-<h3>1) Plot a SIGMET</h3>
-<ol>
+  <h3>1) Plot a SIGMET</h3>
+  <ol>
     <li>Take a picture of the ACARS screen showing the SIGMET information.</li>
     <li>Select and copy the coordinates defining the affected area.</li>
     <li>Paste them into the app’s text field.</li>
     <li>Tap <strong>Plot SIGMET</strong>.</li>
     <li>The hazard area appears as a shaded polygon on the map.</li>
-</ol>
+  </ol>
 
-<h3>2) Plot Your Route</h3>
-<ol>
+  <h3>2) Plot Your Route</h3>
+  <ol>
     <li>Enter your planned route (waypoints or coordinates).</li>
     <li>Tap <strong>Plot Route</strong>.</li>
     <li>The route is displayed with waypoint markers.</li>
-</ol>
+  </ol>
 
-<h3>3) Clear the Map</h3>
-<ol>
+  <h3>3) Clear the Map</h3>
+  <ol>
     <li>Tap <strong>Clear SIGMET</strong> to remove the hazard area.</li>
     <li>Tap <strong>Clear Route</strong> to remove the route and pins.</li>
     <li>Use <strong>Reset</strong> to clear everything and start fresh.</li>
-</ol>
+  </ol>
 
-<div class="note">
+  <div class="note">
     <strong>Tip:</strong> For best offline performance, open the app on Wi-Fi before a flight so map tiles are cached.
-</div>
+  </div>
 
-<div class="note">
-    <strong>Important:</strong> This app is for situational awareness and training purposes only. Always rely on official weather briefings and company procedures for operational decisions.
-</div>
+  <div class="note">
+    <strong>Important:</strong> This app is for situational awareness and training purposes only.
+    Always rely on official weather briefings and company procedures for operational decisions.
+  </div>
 
-<h2>Support</h2>
-<p>
-📧 <a href="mailto:aviationgrade.software@gmail.com">aviationgrade.software@gmail.com</a>
-</p>
+  <h2>Support</h2>
+  <p>
+    For support, questions, or feedback:<br />
+    📧 <a href="mailto:aviationgrade.software@gmail.com">aviationgrade.software@gmail.com</a>
+  </p>
 
-<h2>Privacy Policy</h2>
-<p>
-<a href="privacy.html">Privacy Policy</a>
-</p>
+  <h2>Privacy Policy</h2>
+  <p>
+    Read our <a href="privacy.html">Privacy Policy</a>.
+  </p>
 
-<footer>
+  <footer>
     © 2026 Juan M. Padilla – Independent iOS Developer
-</footer>
+  </footer>
 
 </body>
 </html>
