--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
   <div class="header">
     <img src="icon.png" alt="SIGMET Plotter App Icon" class="app-icon" />
     <h1>SIGMET Plotter</h1>
+    <div style="text-align:center; margin:30px 0;">
+  <a href="https://apps.apple.com/app/id6737157027" target="_blank">
+    <img 
+      src="Download_on_the_App_Store_Badge_ESMX_RGB_blk_100217.svg"
+      alt="Download on the App Store"
+      style="width:220px;">
+  </a>
+</div>
   </div>
 
   <p class="store-badge">
