Fix typo in heading for plot duration

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 
     
-    <h1>  ⚡Plot in 5 secons ⚡</h1>
+    <h1>  ⚡Plot in 5 seconds ⚡</h1>
     <h1>  🌍Works offline Worldwide 🌍</h1>
     <h1>  🧑🏽‍✈️Created for Pilots by a Pilot🧑🏽‍✈️</h1>
     <h1> 📎Paste SIGMET from ACARS or PDF📎</h1>
