Revise offline performance tip in index.html
Updated tip for offline performance regarding maps.

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   </ol>
 
   <div class="note">
-    <strong>Tip:</strong> For best offline performance, open the app on Wi-Fi before a flight so map tiles are cached.
+    <strong>Tip:</strong> Maps work even without internet connection.
   </div>
 
   <div class="note">
